--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,6 +14,7 @@ androidx-lifecycle-runtime-compose = "2.6.1"
 androidx-palette = "1.0.0"
 ktorVersion = "2.3.0"
 compose-bom = "2023.04.00-alpha03"
+landscapist = "2.1.13"
 
 [libraries]
 core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
@@ -44,6 +45,10 @@ ktorSerializationJson = { module = "io.ktor:ktor-serialization-kotlinx-json", ve
 ktorContentNegotiation = { module = "io.ktor:ktor-client-content-negotiation", version.ref = "ktorVersion" }
 ktorOkHttpEngine = { module = "io.ktor:ktor-client-okhttp", version.ref = "ktorVersion" }
 
+landscapistGlide = { module = "com.github.skydoves:landscapist-glide", version.ref = "landscapist" }
+landscapistPalette = { module = "com.github.skydoves:landscapist-palette", version.ref = "landscapist" }
+landscapistPlaceholder = { module = "com.github.skydoves:landscapist-placeholder", version.ref = "landscapist" }
+
 [plugins]
 com-android-application = { id = "com.android.application", version.ref = "agp" }
 org-jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "org-jetbrains-kotlin-android" }
@@ -51,3 +56,4 @@ kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", versi
 
 [bundles]
 ktor = ["ktorCore", "ktorSerialization", "ktorContentNegotiation", "ktorSerializationJson", "ktorOkHttpEngine"]
+landscapist = ["landscapistGlide", "landscapistPalette", "landscapistPlaceholder"]
