--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,7 @@
 [versions]
 agp = "8.1.0-beta03"
-org-jetbrains-kotlin-android = "1.8.20"
-core-ktx = "1.10.0"
+org-jetbrains-kotlin-android = "1.8.21"
+core-ktx = "1.10.1"
 junit = "4.13.2"
 androidx-test-ext-junit = "1.1.5"
 espresso-core = "3.5.1"
@@ -15,6 +15,8 @@ androidx-palette = "1.0.0"
 ktorVersion = "2.3.0"
 compose-bom = "2023.04.00-alpha03"
 landscapist = "2.1.13"
+roomVersion = "2.5.1"
+pagingVersion = "3.1.1"
 
 [libraries]
 core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
@@ -49,11 +51,21 @@ landscapistGlide = { module = "com.github.skydoves:landscapist-glide", version.r
 landscapistPalette = { module = "com.github.skydoves:landscapist-palette", version.ref = "landscapist" }
 landscapistPlaceholder = { module = "com.github.skydoves:landscapist-placeholder", version.ref = "landscapist" }
 
+roomCompiler = { module = "androidx.room:room-compiler", version.ref = "roomVersion" }
+roomRuntime = { module = "androidx.room:room-runtime", version.ref = "roomVersion" }
+roomKtx = { module = "androidx.room:room-ktx", version.ref = "roomVersion" }
+pagingRuntime = { module = "androidx.paging:paging-runtime-ktx", version.ref = "pagingVersion" }
+roomPaging = { module = "androidx.room:room-paging", version.ref = "roomVersion" }
+pagingCompose = "androidx.paging:paging-compose:1.0.0-alpha19"
+
 [plugins]
 com-android-application = { id = "com.android.application", version.ref = "agp" }
 org-jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "org-jetbrains-kotlin-android" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "org-jetbrains-kotlin-android" }
+ksp = { id = "com.google.devtools.ksp", version = "1.8.21-1.0.11" }
 
 [bundles]
 ktor = ["ktorCore", "ktorSerialization", "ktorContentNegotiation", "ktorSerializationJson", "ktorOkHttpEngine"]
 landscapist = ["landscapistGlide", "landscapistPalette", "landscapistPlaceholder"]
+roomLibs = ["roomRuntime", "roomKtx"]
+pagingLibs = ["pagingRuntime", "roomPaging"]
