--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -49,6 +49,7 @@ ktorSerialization = { module = "io.ktor:ktor-client-serialization", version.ref 
 ktorSerializationJson = { module = "io.ktor:ktor-serialization-kotlinx-json", version.ref = "ktorVersion" }
 ktorContentNegotiation = { module = "io.ktor:ktor-client-content-negotiation", version.ref = "ktorVersion" }
 ktorOkHttpEngine = { module = "io.ktor:ktor-client-okhttp", version.ref = "ktorVersion" }
+ktorLogging = { module = "io.ktor:ktor-client-logging", version.ref = "ktorVersion" }
 
 landscapistGlide = { module = "com.github.skydoves:landscapist-glide", version.ref = "landscapist" }
 landscapistPalette = { module = "com.github.skydoves:landscapist-palette", version.ref = "landscapist" }
@@ -61,6 +62,8 @@ pagingRuntime = { module = "androidx.paging:paging-runtime-ktx", version.ref = "
 roomPaging = { module = "androidx.room:room-paging", version.ref = "roomVersion" }
 pagingCompose = "androidx.paging:paging-compose:1.0.0-alpha19"
 
+systemUiController = "com.google.accompanist:accompanist-systemuicontroller:0.31.2-alpha"
+
 [plugins]
 com-android-application = { id = "com.android.application", version.ref = "agp" }
 org-jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "org-jetbrains-kotlin-android" }
@@ -68,7 +71,7 @@ kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", versi
 ksp = { id = "com.google.devtools.ksp", version = "1.8.21-1.0.11" }
 
 [bundles]
-ktor = ["ktorCore", "ktorSerialization", "ktorContentNegotiation", "ktorSerializationJson", "ktorOkHttpEngine"]
+ktor = ["ktorCore", "ktorSerialization", "ktorContentNegotiation", "ktorSerializationJson", "ktorOkHttpEngine", "ktorLogging"]
 landscapist = ["landscapistGlide", "landscapistPalette", "landscapistPlaceholder"]
 roomLibs = ["roomRuntime", "roomKtx"]
 pagingLibs = ["pagingRuntime", "roomPaging"]
