--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,7 @@
 [versions]
 agp = "8.1.0-beta03"
 datastore = "1.0.0"
+media3 = "1.0.2"
 org-jetbrains-kotlin-android = "1.8.21"
 core-ktx = "1.10.1"
 junit = "4.13.2"
@@ -14,7 +15,7 @@ androidx-lifecycle-compose = "2.6.1"
 androidx-lifecycle-runtime-compose = "2.6.1"
 androidx-palette = "1.0.0"
 ktorVersion = "2.3.0"
-compose-bom = "2023.04.00-alpha03"
+compose-bom = "2023.04.00-beta01"
 landscapist = "2.1.13"
 radarny = "1.0.1"
 roomVersion = "2.5.1"
@@ -23,6 +24,16 @@ protobufVersion = "3.23.0"
 
 [libraries]
 androidx-datastore = { module = "androidx.datastore:datastore", version.ref = "datastore" }
+androidx-media3-datasource-rtmp = { module = "androidx.media3:media3-datasource-rtmp", version.ref = "media3" }
+androidx-media3-datasource-okhttp = { module = "androidx.media3:media3-datasource-okhttp", version.ref = "media3" }
+androidx-media3-datasource-cronet = { module = "androidx.media3:media3-datasource-cronet", version.ref = "media3" }
+androidx-media3-exoplayer = { module = "androidx.media3:media3-exoplayer", version.ref = "media3" }
+androidx-media3-session = { module = "androidx.media3:media3-session", version.ref = "media3" }
+androidx-media3-exoplayer-ima = { module = "androidx.media3:media3-exoplayer-ima", version.ref = "media3" }
+androidx-media3-exoplayer-rtsp = { module = "androidx.media3:media3-exoplayer-rtsp", version.ref = "media3" }
+androidx-media3-exoplayer-hls = { module = "androidx.media3:media3-exoplayer-hls", version.ref = "media3" }
+androidx-media3-exoplayer-dash = { module = "androidx.media3:media3-exoplayer-dash", version.ref = "media3" }
+androidx-media3-ui = { module = "androidx.media3:media3-ui", version.ref = "media3" }
 core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-test-ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidx-test-ext-junit" }
@@ -66,6 +77,7 @@ roomPaging = { module = "androidx.room:room-paging", version.ref = "roomVersion"
 pagingCompose = "androidx.paging:paging-compose:1.0.0-alpha19"
 
 systemUiController = "com.google.accompanist:accompanist-systemuicontroller:0.31.2-alpha"
+permissions = "com.google.accompanist:accompanist-permissions:0.31.2-alpha"
 
 protobufJava = { module = "com.google.protobuf:protobuf-javalite", version.ref = "protobufVersion" }
 protobufKotlin = { module = "com.google.protobuf:protobuf-kotlin-lite", version.ref = "protobufVersion" }
