--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,25 +1,25 @@
 [versions]
-agp = "8.1.0-beta05"
+agp = "8.2.0-alpha09"
 datastore = "1.0.0"
 legacySupportV4 = "1.0.0"
-media3 = "1.1.0-alpha01"
+media3 = "1.1.0-rc01"
 org-jetbrains-kotlin-android = "1.8.21"
 core-ktx = "1.10.1"
 junit = "4.13.2"
 androidx-test-ext-junit = "1.1.5"
 espresso-core = "3.5.1"
 lifecycle-runtime-ktx = "2.6.1"
-activity-compose = "1.7.1"
-navigation-compose-version = "2.5.3"
-coil-compose-version = "2.3.0"
+activity-compose = "1.7.2"
+navigation-compose-version = "2.6.0"
+coil-compose-version = "2.4.0"
 androidx-lifecycle-compose = "2.6.1"
 androidx-lifecycle-runtime-compose = "2.6.1"
 androidx-palette = "1.0.0"
-ktorVersion = "2.3.0"
-compose-bom = "2023.04.00-beta01.1"
+ktorVersion = "2.3.1"
+compose-bom = "2023.06.00-alpha01"
 landscapist = "2.1.13"
 radarny = "1.0.1"
-roomVersion = "2.5.1"
+roomVersion = "2.5.2"
 pagingVersion = "3.1.1"
 protobufVersion = "3.23.0"
 
@@ -75,12 +75,13 @@ landscapistPlaceholder = { module = "com.github.skydoves:landscapist-placeholder
 roomCompiler = { module = "androidx.room:room-compiler", version.ref = "roomVersion" }
 roomRuntime = { module = "androidx.room:room-runtime", version.ref = "roomVersion" }
 roomKtx = { module = "androidx.room:room-ktx", version.ref = "roomVersion" }
+roomAnnotationProcessor = { module = "androidx.room:room-compiler", version.ref = "roomVersion" }
 pagingRuntime = { module = "androidx.paging:paging-runtime-ktx", version.ref = "pagingVersion" }
 roomPaging = { module = "androidx.room:room-paging", version.ref = "roomVersion" }
-pagingCompose = "androidx.paging:paging-compose:1.0.0-alpha19"
+pagingCompose = "androidx.paging:paging-compose:3.2.0-rc01"
 
-systemUiController = "com.google.accompanist:accompanist-systemuicontroller:0.31.2-alpha"
-permissions = "com.google.accompanist:accompanist-permissions:0.31.2-alpha"
+systemUiController = "com.google.accompanist:accompanist-systemuicontroller:0.31.3-beta"
+permissions = "com.google.accompanist:accompanist-permissions:0.31.3-beta"
 
 protobufJava = { module = "com.google.protobuf:protobuf-javalite", version.ref = "protobufVersion" }
 protobufKotlin = { module = "com.google.protobuf:protobuf-kotlin-lite", version.ref = "protobufVersion" }
