Lots of playing around

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-agp = "8.2.0-alpha09"
+agp = "8.2.0-alpha10"
 datastore = "1.0.0"
 legacySupportV4 = "1.0.0"
 media3 = "1.1.0-rc01"
@@ -10,7 +10,7 @@ androidx-test-ext-junit = "1.1.5"
 espresso-core = "3.5.1"
 lifecycle-runtime-ktx = "2.6.1"
 activity-compose = "1.7.2"
-navigation-compose-version = "2.6.0"
+navigation-compose-version = "2.7.0-beta01"
 coil-compose-version = "2.4.0"
 androidx-lifecycle-compose = "2.6.1"
 androidx-lifecycle-runtime-compose = "2.6.1"
