--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-agp = "8.2.0-alpha11"
+agp = "8.2.0-alpha12"
 datastore = "1.0.0"
 legacySupportV4 = "1.0.0"
 media3 = "1.1.0-rc01"
@@ -16,12 +16,14 @@ androidx-lifecycle-compose = "2.6.1"
 androidx-lifecycle-runtime-compose = "2.6.1"
 androidx-palette = "1.0.0"
 ktorVersion = "2.3.1"
-compose-bom = "2023.06.00-alpha01"
+compose-bom = "2023.07.00-alpha01"
 landscapist = "2.1.13"
 radarny = "1.0.1"
 roomVersion = "2.5.2"
 pagingVersion = "3.1.1"
 protobufVersion = "3.23.0"
+appcompat = "1.6.1"
+material = "1.9.0"
 
 [libraries]
 androidx-datastore = { module = "androidx.datastore:datastore", version.ref = "datastore" }
@@ -85,6 +87,8 @@ permissions = "com.google.accompanist:accompanist-permissions:0.31.3-beta"
 
 protobufJava = { module = "com.google.protobuf:protobuf-javalite", version.ref = "protobufVersion" }
 protobufKotlin = { module = "com.google.protobuf:protobuf-kotlin-lite", version.ref = "protobufVersion" }
+appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
+material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 
 [plugins]
 com-android-application = { id = "com.android.application", version.ref = "agp" }
@@ -92,6 +96,7 @@ org-jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.re
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "org-jetbrains-kotlin-android" }
 ksp = { id = "com.google.devtools.ksp", version = "1.8.21-1.0.11" }
 protobuf = { id = "com.google.protobuf", version = "0.9.3" }
+androidLibrary = { id = "com.android.library", version.ref = "agp" }
 
 [bundles]
 ktor = ["ktorCore", "ktorSerialization", "ktorContentNegotiation", "ktorSerializationJson", "ktorOkHttpEngine", "ktorLogging"]
