--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,31 +1,32 @@
 [versions]
-agp = "8.2.0-alpha15"
+activityKtx = "1.8.0-alpha07"
+agp = "8.3.0-alpha01"
 datastore = "1.0.0"
 legacySupportV4 = "1.0.0"
-media3 = "1.1.0"
+media3 = "1.1.1"
 org-jetbrains-kotlin-android = "1.9.0"
 core-ktx = "1.10.1"
 junit = "4.13.2"
 androidx-test-ext-junit = "1.1.5"
 espresso-core = "3.5.1"
 lifecycle-runtime-ktx = "2.6.1"
-activity-compose = "1.7.2"
-navigation-compose-version = "2.7.0-beta02"
+navigation-compose-version = "2.7.1"
 coil-compose-version = "2.4.0"
 androidx-lifecycle-compose = "2.6.1"
 androidx-lifecycle-runtime-compose = "2.6.1"
 androidx-palette = "1.0.0"
-ktorVersion = "2.3.2"
-compose-bom = "2023.07.00-alpha02"
-landscapist = "2.2.2"
+ktorVersion = "2.3.3"
+compose-bom = "2023.10.00-SNAPSHOT"
+landscapist = "2.2.7"
 radarny = "1.0.1"
 roomVersion = "2.5.2"
-pagingVersion = "3.1.1"
-protobufVersion = "3.23.4"
+pagingVersion = "3.2.0"
+protobufVersion = "3.24.2"
 appcompat = "1.6.1"
 material = "1.9.0"
 
 [libraries]
+androidx-activity-ktx = { module = "androidx.activity:activity-ktx", version.ref = "activityKtx" }
 androidx-datastore = { module = "androidx.datastore:datastore", version.ref = "datastore" }
 androidx-legacy-support-v4 = { module = "androidx.legacy:legacy-support-v4", version.ref = "legacySupportV4" }
 androidx-media3-datasource-rtmp = { module = "androidx.media3:media3-datasource-rtmp", version.ref = "media3" }
@@ -43,7 +44,7 @@ junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-test-ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidx-test-ext-junit" }
 espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espresso-core" }
 lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycle-runtime-ktx" }
-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activity-compose" }
+activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activityKtx" }
 compose-bom = { module = "dev.chrisbanes.compose:compose-bom", version.ref = "compose-bom" }
 #compose-bom = { module = "androidx.compose:compose-bom", version.ref = "compose-bom" }
 radarny = { module = "ink.lodz:radarny", version.ref = "radarny" }
@@ -80,10 +81,9 @@ roomKtx = { module = "androidx.room:room-ktx", version.ref = "roomVersion" }
 roomAnnotationProcessor = { module = "androidx.room:room-compiler", version.ref = "roomVersion" }
 pagingRuntime = { module = "androidx.paging:paging-runtime-ktx", version.ref = "pagingVersion" }
 roomPaging = { module = "androidx.room:room-paging", version.ref = "roomVersion" }
-pagingCompose = "androidx.paging:paging-compose:3.2.0-rc01"
+pagingCompose = "androidx.paging:paging-compose:3.2.0"
 
-systemUiController = "com.google.accompanist:accompanist-systemuicontroller:0.31.3-beta"
-permissions = "com.google.accompanist:accompanist-permissions:0.31.3-beta"
+permissions = "com.google.accompanist:accompanist-permissions:0.32.0"
 
 protobufJava = { module = "com.google.protobuf:protobuf-javalite", version.ref = "protobufVersion" }
 protobufKotlin = { module = "com.google.protobuf:protobuf-kotlin-lite", version.ref = "protobufVersion" }
