--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,26 +1,26 @@
 [versions]
-activityKtx = "1.8.0-alpha07"
-agp = "8.3.0-alpha01"
+activityKtx = "1.8.0-beta01"
+agp = "8.3.0-alpha07"
 datastore = "1.0.0"
 legacySupportV4 = "1.0.0"
 media3 = "1.1.1"
-org-jetbrains-kotlin-android = "1.9.0"
-core-ktx = "1.10.1"
+org-jetbrains-kotlin-android = "1.9.10"
+core-ktx = "1.12.0"
 junit = "4.13.2"
 androidx-test-ext-junit = "1.1.5"
 espresso-core = "3.5.1"
-lifecycle-runtime-ktx = "2.6.1"
-navigation-compose-version = "2.7.1"
+lifecycle-runtime-ktx = "2.6.2"
+navigation-compose-version = "2.7.2"
 coil-compose-version = "2.4.0"
-androidx-lifecycle-compose = "2.6.1"
-androidx-lifecycle-runtime-compose = "2.6.1"
+androidx-lifecycle-compose = "2.6.2"
+androidx-lifecycle-runtime-compose = "2.6.2"
 androidx-palette = "1.0.0"
-ktorVersion = "2.3.3"
-compose-bom = "2023.10.00-SNAPSHOT"
-landscapist = "2.2.7"
+ktorVersion = "2.3.4"
+compose-bom = "2023.10.00-alpha02"
+landscapist = "2.2.8"
 radarny = "1.0.1"
 roomVersion = "2.5.2"
-pagingVersion = "3.2.0"
+pagingVersion = "3.2.1"
 protobufVersion = "3.24.2"
 appcompat = "1.6.1"
 material = "1.9.0"
@@ -58,7 +58,7 @@ material3 = { group = "androidx.compose.material3", name = "material3" }
 composeMaterialIconsExtended = { group = "androidx.compose.material", name = "material-icons-extended" }
 navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigation-compose-version" }
 coil-compose = { group = "io.coil-kt", name = "coil-compose", version.ref = "coil-compose-version" }
-androidx-lifecycle-runtime = "androidx.lifecycle:lifecycle-runtime-ktx:2.6.1"
+androidx-lifecycle-runtime = "androidx.lifecycle:lifecycle-runtime-ktx:2.6.2"
 androidx-lifecycle-runtime-compose = { module = "androidx.lifecycle:lifecycle-runtime-compose", version.ref = "androidx-lifecycle-runtime-compose" }
 androidx-lifecycle-viewModelCompose = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "androidx-lifecycle-compose" }
 androidx-lifecycle-viewmodel-ktx = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "androidx-lifecycle-compose" }
@@ -81,7 +81,7 @@ roomKtx = { module = "androidx.room:room-ktx", version.ref = "roomVersion" }
 roomAnnotationProcessor = { module = "androidx.room:room-compiler", version.ref = "roomVersion" }
 pagingRuntime = { module = "androidx.paging:paging-runtime-ktx", version.ref = "pagingVersion" }
 roomPaging = { module = "androidx.room:room-paging", version.ref = "roomVersion" }
-pagingCompose = "androidx.paging:paging-compose:3.2.0"
+pagingCompose = "androidx.paging:paging-compose:3.2.1"
 
 permissions = "com.google.accompanist:accompanist-permissions:0.32.0"
 
@@ -94,7 +94,7 @@ material = { group = "com.google.android.material", name = "material", version.r
 com-android-application = { id = "com.android.application", version.ref = "agp" }
 org-jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "org-jetbrains-kotlin-android" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "org-jetbrains-kotlin-android" }
-ksp = { id = "com.google.devtools.ksp", version = "1.9.0-1.0.11" }
+ksp = { id = "com.google.devtools.ksp", version = "1.9.10-1.0.13" }
 protobuf = { id = "com.google.protobuf", version = "0.9.3" }
 androidLibrary = { id = "com.android.library", version.ref = "agp" }
 
