--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 activityKtx = "1.8.0-beta01"
-agp = "8.3.0-alpha07"
+agp = "8.3.0-alpha13"
 datastore = "1.0.0"
 legacySupportV4 = "1.0.0"
 media3 = "1.1.1"
@@ -16,7 +16,7 @@ androidx-lifecycle-compose = "2.6.2"
 androidx-lifecycle-runtime-compose = "2.6.2"
 androidx-palette = "1.0.0"
 ktorVersion = "2.3.4"
-compose-bom = "2023.10.00-alpha02"
+compose-bom = "2023.12.00-alpha01"
 landscapist = "2.2.8"
 radarny = "1.0.1"
 roomVersion = "2.5.2"
@@ -24,6 +24,10 @@ pagingVersion = "3.2.1"
 protobufVersion = "3.24.2"
 appcompat = "1.6.1"
 material = "1.9.0"
+uiautomator = "2.2.0"
+benchmark-macro-junit4 = "1.2.0-rc02"
+androidx-baselineprofile = "1.2.0-rc02"
+profileinstaller = "1.3.1"
 
 [libraries]
 androidx-activity-ktx = { module = "androidx.activity:activity-ktx", version.ref = "activityKtx" }
@@ -89,6 +93,9 @@ protobufJava = { module = "com.google.protobuf:protobuf-javalite", version.ref =
 protobufKotlin = { module = "com.google.protobuf:protobuf-kotlin-lite", version.ref = "protobufVersion" }
 appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
+uiautomator = { group = "androidx.test.uiautomator", name = "uiautomator", version.ref = "uiautomator" }
+benchmark-macro-junit4 = { group = "androidx.benchmark", name = "benchmark-macro-junit4", version.ref = "benchmark-macro-junit4" }
+profileinstaller = { group = "androidx.profileinstaller", name = "profileinstaller", version.ref = "profileinstaller" }
 
 [plugins]
 com-android-application = { id = "com.android.application", version.ref = "agp" }
@@ -97,6 +104,8 @@ kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", versi
 ksp = { id = "com.google.devtools.ksp", version = "1.9.10-1.0.13" }
 protobuf = { id = "com.google.protobuf", version = "0.9.3" }
 androidLibrary = { id = "com.android.library", version.ref = "agp" }
+androidTest = { id = "com.android.test", version.ref = "agp" }
+androidx-baselineprofile = { id = "androidx.baselineprofile", version.ref = "androidx-baselineprofile" }
 
 [bundles]
 ktor = ["ktorCore", "ktorSerialization", "ktorContentNegotiation", "ktorSerializationJson", "ktorOkHttpEngine", "ktorLogging"]
